fix(front): Fix Nav module alignments
Make Blog text appear centered relative to underline Fix hover detection
on horizontal nav because of hole between Blog and Photo due to size

--- a/src/Components/Nav.module.css
+++ b/src/Components/Nav.module.css
@@ -1,39 +1,41 @@
 .navLink {
-  /* color: white; */
+  display: flex;
+
   font-family: var(--monospace-font);
   font-weight: bold;
   font-style: normal;
-  text-decoration: none;
   font-size: 1.5em;
-  transition: color 0.5s;
-  display: flex;
-  align-items: center;
-  &:hover {
-    color: var(--link-focus);
-  }
+  text-decoration: none;
 }
 
 .headerNav {
-  display: grid;
-  overflow: hidden;
   position: relative;
+  display: grid;
   grid-template-columns: repeat(3, 1fr);
+  justify-items: stretch;
+
   width: fit-content;
   padding-bottom: 0.4rem;
   padding-top: 0.4rem;
 
+  --link-padding: 0.7rem;
+
   .navFocus {
-    --extra-width: -1.5rem;
+    --extra-width: -1.3rem;
     --show: 0;
     --index: 0;
+
     position: absolute;
+
     background-color: var(--link-focus);
-    left: calc(var(--index) * (1 / 3) * 100%);
-    top: 2.6rem;
-    width: calc((100% / 3 + var(--extra-width)) * var(--show));
-    align-self: center;
-    height: 0.2rem;
     border-radius: 0.1rem;
+
+    top: 2.6rem;
+    left: calc(var(--index) * (1 / 3) * 100% + var(--link-padding));
+
+    width: calc((100% / 3 + var(--extra-width)) * var(--show));
+    height: 0.2rem;
+
     transition:
       width 0.2s ease-in-out,
       left 0.2s ease-in-out 0.2s;
@@ -46,26 +48,26 @@
       left 0.2s ease-in-out;
   }
 
-  > a:nth-of-type(1):hover ~ .navFocus {
+  > .navLink:nth-of-type(1):hover ~ .navFocus {
     --index: 0 !important;
   }
-  > a:nth-of-type(2):hover ~ .navFocus {
+  > .navLink:nth-of-type(2):hover ~ .navFocus {
     --index: 1 !important;
   }
-  > a:nth-of-type(3):hover ~ .navFocus {
+  > .navLink:nth-of-type(3):hover ~ .navFocus {
     --index: 2 !important;
   }
 
-  /* align-items: center; */
-  a {
-    list-style: none;
-    margin-right: 1.5rem;
-    text-align: center;
-    text-decoration: none;
-    z-index: 3;
+  .navLink {
+    padding-left: 0.7rem;
+    padding-right: 0.7rem;
+    align-items: center;
+    justify-content: center;
 
-    &:last-of-type {
-      margin-right: 0;
+    transition: color 0.5s;
+
+    &:hover {
+      color: var(--link-focus);
     }
   }
 }
